Enforcing 8-byte alignment into API and fixed bug on roll-over.
The API now enforces all data and packets to be 8-byte aligned. It does not
(yet) flag non-aligned packets as bad packets.
The other thing commited is the roll-over bug. When the last packet in the
buffer span over to the start of the buffer, the occlib would refuse to go
beyond the buffer boundary and always return partial packet at the end,
and keep returning partial packet.

--- a/occlib/Makefile
+++ b/occlib/Makefile
@@ -11,6 +11,8 @@ all: CFLAGS+=-O2 -DNDEBUG
 all: common
 
 debug: CFLAGS+=-ggdb -g
+# Keep asserts until this library matures, then remove the following line
+debug: CFLAGS+=-DNDEBUG
 debug: common
 
 common: lib$(LIBNAME).a
