Small changes during the Lab testing.
With the driver and occlib fixes, PacketAnalyzer now runs at 1Mhz ramp
data smoothly. It doesn't implement threaded queueing, instead it processes
DAS packets from kernel queue directly. On single-core preprocessor 2 machine
the CPU utilization is about 10% so we're safe for a while.

--- a/PacketAnalyzer/Makefile
+++ b/PacketAnalyzer/Makefile
@@ -1,5 +1,5 @@
 CPPFLAGS=-Wall -I../occlib/
-LDFLAGS=-L../occlib -locc -lcurses
+LDFLAGS=-L../occlib -locc -lcurses -lrt
 SRCS=$(wildcard *.cpp)
 HDRS=
 BIN=PacketAnalyzer
