On-the-fly comparison of sent and received data.
The main change in the commit is comparing output and input streams.
With that in place, running the program until it fails becomse interesting.
Thus added support for infinite reads from /dev/urandom and optional length
parameter. Had to add signal handling for gracefull shutdowns.

--- a/occhwtools/occhwtools.cbp
+++ b/occhwtools/occhwtools.cbp
@@ -13,13 +13,13 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="../OCClib" />
+					<Add directory="../occlib" />
 				</Compiler>
 				<Linker>
 					<Add library="occ" />
 					<Add library="pthread" />
 					<Add library="rt" />
-					<Add directory="../OCClib" />
+					<Add directory="../occlib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -29,14 +29,14 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../OCClib" />
+					<Add directory="../occlib" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 					<Add library="occ" />
 					<Add library="pthread" />
 					<Add library="rt" />
-					<Add directory="../OCClib" />
+					<Add directory="../occlib" />
 				</Linker>
 			</Target>
 		</Build>
