Added mock library for simulation
For debugging purposes only, there's the occlib_sim.c used through
development of upper layered software. It is not compiled by default.

Replaced library asserts with return codes.

--- a/occlib/occlib.cbp
+++ b/occlib/occlib.cbp
@@ -44,6 +44,11 @@
 		</Unit>
 		<Unit filename="occlib.h" />
 		<Unit filename="occlib_hw.h" />
+		<Unit filename="occlib_sim.c">
+			<Option compilerVar="CC" />
+			<Option compile="0" />
+			<Option link="0" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
