Completed AdaraPlugin, tested for errors with actual data captured from H104 test setup and pushed to adara_parser. Further testing expected with more data.
Changed the DasPacketList::release() interface not to take any parameters, rather release all valid packets in the buffer automatically.

--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -11,6 +11,9 @@ include $(TOP)/configure/CONFIG
 # Split build into static library and app for unit tests
 # to pick-up functionlity from library.
 
+# The C/C++ bitfield ordering in structs is platform AND compiler dependant
+# 
+USR_CXXFLAGS += -DBITFIELD_LSB_FIRST
 USR_CXXFLAGS += -std=c++0x
 CXXFLAGS = -g -ggdb $(USR_CXXFLAGS)
 
