--- a/ned/nedApp/src/ned.cbp
+++ b/ned/nedApp/src/ned.cbp
@@ -16,10 +16,11 @@
 		</MakeCommands>
 		<Build>
 			<Target title="Release">
-				<Option output="bin/Release/ned" prefix_auto="1" extension_auto="1" />
+				<Option output="O.linux-x86_64/ned" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="/home/kvodopivec/work/SNS/git/detectors/ned/iocBoot/iocned/st.cmd" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
