Improved plugins support and documentation
Better documentation of BasePlugin functionality, its usage and
parameters. Introduced EPICS registration helper macros that hide the
complexity of EPICS registration procedure. Moved invoking of the
AdaraPlugin to the runtime st.cmd where it belongs.

--- a/ned/nedApp/src/ned.cbp
+++ b/ned/nedApp/src/ned.cbp
@@ -58,7 +58,7 @@
 		<Unit filename="DmaCircularBuffer.h" />
 		<Unit filename="DmaCopier.cpp" />
 		<Unit filename="DmaCopier.h" />
-		<Unit filename="EpicsRegister.cpp" />
+		<Unit filename="EpicsRegister.h" />
 		<Unit filename="OccDispatcher.cpp" />
 		<Unit filename="OccDispatcher.h" />
 		<Unit filename="OccPortDriver.cpp" />
