Removed dispatcher class and make sure plugins can be instantiated from st.cmd
The dispatcher class was kinda an overhead as it would add complexity
for no good reason but to mark classes as dispatchers. Its functionality
was merged into OccPortDriver, which simplified the asyn port naming and
using from st.cmd.

The AdaraPlugin, as the first plugin available, is now instantiated from
where it should be, the st.cmd. Couple of template changes were required
to properly test PV access is still working nicely.

--- a/ned/nedApp/Db/AdaraPlugin.template
+++ b/ned/nedApp/Db/AdaraPlugin.template
@@ -10,7 +10,7 @@ record(longout, "$(P)$(R)ListenPort")
    field(OUT,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))LISTEN_PORT")
    field(VAL,   "0")
 }
-record(stringout, "$(P)$(R)ClientIp")
+record(stringin, "$(P)$(R)ClientIp")
 {
     field(DTYP, "asynOctetRead")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CLIENT_IP")
@@ -21,4 +21,5 @@ record(longin, "$(P)$(R)TransmittedCount")
    field(DTYP,  "asynInt32")
    field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))TRANSMITTED_COUNT")
    field(VAL,   "0")
+   field(SCAN,  "I/O Intr")
 }
