Bunch of improvements to base plugin classes
In preparation for real module plugins which require two-way
communication, synchronous data sending, creating of packets to be sent
out and others, this commit is decoupled from the actual plugin commits.

--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -43,6 +43,7 @@ SHARED_LIBRARIES = NO
 # Headers used by unit-tests
 INC += CircularBuffer.h
 
+ned_SRCS  += Timer.cpp
 ned_SRCS  += OccPortDriver.cpp
 ned_SRCS  += DmaCircularBuffer.cpp
 ned_SRCS  += CircularBuffer.cpp
