Not yet complete DSP plugin
Basic features are there but need to be tested, reading, writing
configuration, read version.

--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -53,9 +53,14 @@ ned_SRCS  += DasPacketList.cpp
 ned_SRCS  += BasePlugin.cpp
 ned_SRCS  += AdaraPlugin.cpp
 ned_SRCS  += CmdDispatcher.cpp
+ned_SRCS  += DspPlugin.cpp
 
 #===========================
 
 include $(TOP)/configure/RULES
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
+
+doc: Doxyfile
+	./extract_module_params.sh DspPlugin.cpp > DspPlugin.dox
+	doxygen
