--- a/ned/nedApp/src/ned.cbp
+++ b/ned/nedApp/src/ned.cbp
@@ -44,14 +44,14 @@
 		<Unit filename="AdaraPlugin.h" />
 		<Unit filename="BaseCircularBuffer.cpp" />
 		<Unit filename="BaseCircularBuffer.h" />
-		<Unit filename="BaseDispatcher.cpp" />
-		<Unit filename="BaseDispatcher.h" />
 		<Unit filename="BasePlugin.cpp" />
 		<Unit filename="BasePlugin.h" />
 		<Unit filename="CircularBuffer.cpp" />
 		<Unit filename="CircularBuffer.h" />
-		<Unit filename="CmdPlugin.cpp" />
-		<Unit filename="CmdPlugin.h" />
+		<Unit filename="CmdDispatcher.cpp" />
+		<Unit filename="CmdDispatcher.h" />
+		<Unit filename="Common.cpp" />
+		<Unit filename="Common.h" />
 		<Unit filename="DasPacket.cpp" />
 		<Unit filename="DasPacket.h" />
 		<Unit filename="DasPacketList.cpp" />
@@ -60,11 +60,14 @@
 		<Unit filename="DmaCircularBuffer.h" />
 		<Unit filename="DmaCopier.cpp" />
 		<Unit filename="DmaCopier.h" />
+		<Unit filename="DspPlugin.cpp" />
+		<Unit filename="DspPlugin.h" />
 		<Unit filename="EpicsRegister.h" />
-		<Unit filename="OccDispatcher.cpp" />
-		<Unit filename="OccDispatcher.h" />
+		<Unit filename="Log.h" />
 		<Unit filename="OccPortDriver.cpp" />
 		<Unit filename="OccPortDriver.h" />
+		<Unit filename="Timer.cpp" />
+		<Unit filename="Timer.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="unittest/testCircularBuffer.cpp" />
 		<Extensions>
