Pushed DspPlugin into EPICS shell, added (some) EPICS records.

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -13,6 +13,7 @@ include $(TOP)/configure/CONFIG
 DB += ned.template
 DB += BasePlugin.template
 DB += AdaraPlugin.template
+DB += DspPlugin.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
