--- a/ned/nedApp/Db/DspPlugin.template
+++ b/ned/nedApp/Db/DspPlugin.template
@@ -1,3 +1,12 @@
+record(mbbi, "$(P)$(R)Status")
+{
+    field(PINI, "YES")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))STATUS")
+    field(ZRVL, "0")
+    field(ZRST, "OK")
+    field(SCAN, "I/O Intr")
+}
 record(mbbo, "$(P)$(R)Command")
 {
     field(DTYP, "asynInt32")
