--- a/ned/nedApp/Db/ned.template
+++ b/ned/nedApp/Db/ned.template
@@ -1,3 +1,16 @@
+record(mbbi, "$(P)$(R)Status")
+{
+    field(PINI, "YES")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))STATUS")
+    field(ZRVL, "0")
+    field(ONVL, "1")
+    field(TWVL, "2")
+    field(ZRST, "OK")
+    field(ONST, "RX buffer full")
+    field(TWST, "OCC error")
+    field(SCAN, "I/O Intr")
+}
 record(mbbi, "$(P)$(R)DeviceStatus")
 {
     field(PINI, "YES")
@@ -14,6 +27,7 @@ record(mbbi, "$(P)$(R)DeviceStatus")
     field(TWST, "No device")
     field(THST, "Version mismatch")
     field(FRST, "Interface error")
+    field(SCAN, "I/O Intr")
 }
 record(mbbi, "$(P)$(R)BoardType")
 {
@@ -29,24 +43,24 @@ record(mbbi, "$(P)$(R)BoardType")
 }
 record(bi, "$(P)$(R)BoardFirmwareVer")
 {
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BOARD_FIRMWARE_VER")
+    field(PINI, "YES")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BOARD_FIRMWARE_VER")
 }
 record(bi, "$(P)$(R)OpticsPresent")
 {
-   field(PINI, "YES")
-   field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))OPTICS_PRESENT")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-   field(SCAN, "1 second")
+    field(PINI, "YES")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))OPTICS_PRESENT")
+    field(ZNAM, "No")
+    field(ONAM, "Yes")
+    field(SCAN, "1 second")
 }
 record(bo, "$(P)$(R)RxEnabled")
 {
-   field(DTYP, "asynInt32")
-   field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))RX_ENABLED")
-   field(ZNAM, "No")
-   field(ONAM, "Yes")
-   field(SCAN, "I/O Intr")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))RX_ENABLED")
+    field(ZNAM, "No")
+    field(ONAM, "Yes")
+    field(SCAN, "I/O Intr")
 }
