Added DiscoverPlugin for module discover
Not yet complete as it's been only tested with single DSP in chain.

--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -54,6 +54,7 @@ ned_SRCS  += BasePlugin.cpp
 ned_SRCS  += AdaraPlugin.cpp
 ned_SRCS  += CmdDispatcher.cpp
 ned_SRCS  += DspPlugin.cpp
+ned_SRCS  += DiscoverPlugin.cpp
 
 #===========================
 
