--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -14,6 +14,7 @@ DB += ned.template
 DB += BasePlugin.template
 DB += AdaraPlugin.template
 DB += DspPlugin.template
+DB += DiscoverPlugin.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
