--- a/ned/nedApp/Db/ned.template
+++ b/ned/nedApp/Db/ned.template
@@ -1,8 +1,9 @@
 record(mbbi, "$(P)$(R)Status")
 {
+    field(DESC, "Status of OccPortDriver")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))STATUS")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
     field(ZRVL, "0")
     field(ONVL, "1")
     field(TWVL, "2")
@@ -11,11 +12,23 @@ record(mbbi, "$(P)$(R)Status")
     field(TWST, "OCC error")
     field(SCAN, "I/O Intr")
 }
-record(mbbi, "$(P)$(R)DeviceStatus")
+record(mbbo, "$(P)$(R)Command")
 {
+    field(DESC, "Issue OccPortDriver command")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
+    field(ZRVL, "0")
+    field(ONVL, "1")
+    field(TWVL, "2")
+    field(ZRST, "None")
+    field(ONST, "Optics enable")
+}
+record(mbbi, "$(P)$(R)BoardStatus")
+{
+    field(DESC, "OCC board status")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))DEVICE_STATUS")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BoardStatus")
     # Those match to return code of occ_open()
     field(ZRVL, "0")
     field(ONVL, "1")  # EPERM
@@ -31,9 +44,10 @@ record(mbbi, "$(P)$(R)DeviceStatus")
 }
 record(mbbi, "$(P)$(R)BoardType")
 {
+    field(DESC, "OCC board type")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BOARD_TYPE")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BoardType")
     field(ONVL, "1")
     field(TWVL, "2")
     field(FFVL, "15")
@@ -41,25 +55,28 @@ record(mbbi, "$(P)$(R)BoardType")
     field(TWST, "SNS PCI Express")
     field(FFST, "Simulator")
 }
-record(bi, "$(P)$(R)BoardFirmwareVer")
+record(bi, "$(P)$(R)BoardFwVer")
 {
+    field(DESC, "OCC board firmware version")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BOARD_FIRMWARE_VER")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))BoardFwVer")
 }
-record(bi, "$(P)$(R)OpticsPresent")
+record(bo, "$(P)$(R)OpticsPresent")
 {
+    field(DESC, "Is optical cable present")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))OPTICS_PRESENT")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))OpticsPresent")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(SCAN, "1 second")
 }
-record(bo, "$(P)$(R)RxEnabled")
+record(bo, "$(P)$(R)OpticsEnabled")
 {
+    field(DESC, "Is optical link enabled")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))RX_ENABLED")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))OpticsEnabled")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(SCAN, "I/O Intr")
