--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -1,6 +1,6 @@
 TOP=../..
 
-OCCLIB_DIR=/home/dasuser/work/klemen/git/detectors/occlib
+OCCLIB_DIR=/home/kvx/work/git/detectors/occlib
 
 include $(TOP)/configure/CONFIG
 #----------------------------------------
@@ -53,7 +53,9 @@ ned_SRCS  += DasPacketList.cpp
 ned_SRCS  += BasePlugin.cpp
 ned_SRCS  += AdaraPlugin.cpp
 ned_SRCS  += CmdDispatcher.cpp
+ned_SRCS  += BaseModulePlugin.cpp
 ned_SRCS  += DspPlugin.cpp
+ned_SRCS  += RocPlugin.cpp
 ned_SRCS  += DiscoverPlugin.cpp
 
 #===========================
