DspPlugin can read and write configuration
Added missing configuration fields based on updated DSP documentation from Eric.
The test included:
* reading existing configuration from DSP (previously configured by dcomserver)
* getting values through PVs
* changing some PV values
* requesting writing configuration
* verify updated DSP behaviour

Dsp records template was generated using the config2db.pl tool out of DspPlugin.cpp
source code.

--- a/ned/nedApp/Db/BasePlugin.template
+++ b/ned/nedApp/Db/BasePlugin.template
@@ -16,7 +16,7 @@ record(longin, "$(P)$(R)ProcCount")
 record(longin, "$(P)$(R)RxCount")
 {
    field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))RxCount"
+   field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))RxCount")
    field(VAL,   "0")
    field(SCAN,  "I/O Intr")
 }
