Pushed generic code from RocPlugin and DspPlugin into BaseModulePlugin
The status state machine is now part of all module plugins.
Configuration and status parameters are completely generalized, but
plugins can still override. Command handling is also common to all plugins.

--- a/ned/nedApp/Db/DspPlugin.template
+++ b/ned/nedApp/Db/DspPlugin.template
@@ -16,13 +16,11 @@ record(mbbo, "$(P)$(R)Command")
     field(TWVL, "2")
     field(THVL, "3")
     field(FRVL, "4")
-    field(FVVL, "5")
     field(ZRST, "No command")
     field(ONST, "Initialize")
-    field(TWST, "Write config")
-    field(THST, "Read config")
-    field(FRST, "Reset config")
-    field(FVST, "Read status")
+    field(TWST, "Read status")
+    field(THST, "Write config")
+    field(FRST, "Read config")
 }
 record(stringin, "$(P)$(R)HwDate")
 {
