--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -57,6 +57,7 @@ ned_SRCS  += BaseModulePlugin.cpp
 ned_SRCS  += DspPlugin.cpp
 ned_SRCS  += RocPlugin.cpp
 ned_SRCS  += DiscoverPlugin.cpp
+ned_SRCS  += DumpPlugin.cpp
 
 #===========================
 
