Changed module types into HEX for easy matching to traces.

--- a/ned/nedApp/src/ned.cbp
+++ b/ned/nedApp/src/ned.cbp
@@ -64,6 +64,8 @@
 		<Unit filename="DmaCopier.h" />
 		<Unit filename="DspPlugin.cpp" />
 		<Unit filename="DspPlugin.h" />
+		<Unit filename="DumpPlugin.cpp" />
+		<Unit filename="DumpPlugin.h" />
 		<Unit filename="EpicsRegister.h" />
 		<Unit filename="Log.h" />
 		<Unit filename="OccPortDriver.cpp" />
