Fixed compiler warnings on newer GCC version (Ubuntu 13.10)

--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -1,6 +1,6 @@
 TOP=../..
 
-OCCLIB_DIR=/home/kvx/work/git/detectors/occlib
+OCCLIB_DIR=$(TOP)/../occlib
 
 include $(TOP)/configure/CONFIG
 #----------------------------------------
